--- a/WebContent/css/estilos.css
+++ b/WebContent/css/estilos.css
@@ -17,54 +17,7 @@
 * Resetear
 ***********************************************************************/
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 
 /*
 * Etiquetas
@@ -114,8 +67,9 @@ footer{
 	width: 100%;
 
 }
-a {
+a ,a:visited{
 	color: #0358d8;
+	text-decoration: none;
 }
 
 a:hover {
@@ -131,6 +85,7 @@ h1{
 }
 
 h2, h3, h4, h5, h6 {
+	text-transform: capitalize;
     color: #2f363c;
 	margin-top: 5px;
     margin-bottom: 6px;
@@ -140,6 +95,8 @@ h2, h3, h4, h5, h6 {
 
 p{
 	text-indent: 20px;
+	margin-bottom: 1em;
+	text-align: left
 }
 
 span{
@@ -177,10 +134,13 @@ h1{
 
 main.content{
 	margin-top: 80px;
+	/*background-color: red; Lo utilizamos para ver el espacio que ocupa con el inspector*/
+	margin-bottom: 70px;
 }
 
-#tituloEnMedio{
+.tituloEnMedio{
 	color: rgb(209, 221, 239);
+	margin: 0 0 0 0;
 }
 
 header.principal{
@@ -189,6 +149,7 @@ header.principal{
 	position: fixed;
 	width: 100%;
 	top: 0;
+	z-index: 999;
 	/*padding: 10px;*/
 }
 
@@ -227,7 +188,7 @@ nav ul {
 
     
 }
-nav li a.menu {
+wrapper-nav nav li a {
   color: #003580;
   display: block;
   text-decoration: none;
@@ -248,9 +209,16 @@ nav li a.menu {
 }
 nav li a.menu:hover {
   background: tomato;
+  
   color: white;
+  padding: 3px, 8px;
 }
 
+.active{
+	background: #003580  !important;
+	border-radius: 12px;
+	/*font-size: 3em;*/
+}
 
 @media screen and (min-width: 480px) {
     nav ul {
