--- a/WebContent/css/estilos.css
+++ b/WebContent/css/estilos.css
@@ -214,6 +214,20 @@ nav li a.menu:hover {
   padding: 3px, 8px;
 }
 
+.boton-arriba{
+	position: fixed;
+  	bottom:  2em;
+	right: 2em;
+	background-color: white;
+	border-radius: 50%;
+	padding: 2px;
+	z-index: 1000;
+
+	-webkit-box-shadow: 12px 8px 16px -2px rgba(0,0,0,0.74); 
+	box-shadow: 12px 8px 16px -2px rgba(0,0,0,0.74);
+
+}
+
 .active{
 	background: #003580  !important;
 	border-radius: 12px;
