--- a/WebContent/css/posicionamiento.css
+++ b/WebContent/css/posicionamiento.css
@@ -1,45 +1,66 @@
 @charset "ISO-8859-1";
 
-		.contenedor{
-			border: 1px solid #000;
-			padding: 20px;
-			/*position: relative;	 Para que la clase absoluta sea realativa al contenedor*/
-		}
-		.box{
-			background-color:lime;
-			color: fuchsia;
-			margin: 10px;
-			width: 31%;
-			display: inline-block;
-			height: 150px;
-		}
-		.w100{
-			width: 99%;
-		}
-		.relativo{
-			background-color: orange;
-			position: relative;
-			top: 50px;
-			left: 75px;
-		}
+	.contenedor{
+		border: 1px solid #000;
+		padding: 20px;
+		/*position: relative;	 Para que la clase absoluta sea realativa al contenedor*/
+	}
+	.box{
+		background-color:lime;
+		color: fuchsia;
+		margin: 10px;
+		width: 31%;
+		display: inline-block;
+		height: 150px;
+	}
+	.w100{
+		width: 99%;
+	}
+	.relativo{
+		background-color: orange;
+		position: relative;
+		top: 50px;
+		left: 75px;
+	}
 
-		.absoluto{
-			background-color: blue;
-			position: absolute;
-			top: 50px;
-			left: 75px;
-		}
+	.absoluto{
+		background-color: blue;
+		position: absolute;
+		top: 50px;
+		left: 75px;
+	}
 
-		.flotante{
-			background-color: aquamarine;
-			float: right;
-		}
-	
-		.visualizar{
-			visibility: hidden
-		}
+	.flotante{
+		background-color: aquamarine;
+		float: right;
+	}
 
-		.ocultar{
-			display:none;
-		}
+	.visualizar{
+		visibility: hidden
+	}
 
+	.ocultar{
+		display:none;
+	}
+	.card{
+
+	}
+	.card-content{
+		border: 1px solid #000;
+		position: relative;
+		width: 100%;
+		height: 100%;
+		background-color: aliceblue;
+	}
+
+	.card-content img{
+		width: 100%;
+		height: 100%;
+	}
+	.flotante{
+		position: relative;
+		top: -50px;
+		background-color: bisque;
+		height: 50px;
+		overflow: hidden;
+	}
