--- a/WebContent/css/Ejemplos.css
+++ b/WebContent/css/Ejemplos.css
@@ -1,46 +1,72 @@
 /*
+*   Css para los ejemplos de la carpeta "/ejemplos-css/"
 *
-* Ejemplos CSS
 *
 */
+pAritz{
+	color: orange;
+}
 
-
-/*body{
-	font-size:16;
-}*/
-
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
 	font-family: serif;
 	color: teal;
 }
 
-h1{
+h1 {
 	font-size: 2em;
 }
-
 
 h2{
 	font-size: 1.8em;
 }
 
 h3{
-	font-size:1.5em;
+	font-size: 1.5em;
 }
+
 h4, h5, h6{
-	font-size:1.3em;
+	font-size: 1.3em;
 }
 
-p span { color: red; }
 
-span { color: blueviolet; }
-@media print{
-	h1{
-		color:pink;
-	}
+h1{
+	color: teal !important;	
 }
 
-/*
-input[type="text"]{
+h1{
+	color: blue;
+}
 
-}*/
-.destacado { color: red; }
+h1{
+	color: red;
+	font-size: 3em; 	
+}
+
+p span{
+	background-color: blue;
+	color:white;
+	
+}
+
+
+input[type="text"] {
+	
+}
+
+input.destacado { }
+input[class="destacado"] {
+	
+}
+
+
+p .destacado{
+	color: red;
+}
+
+
+@media print {
+
+  h1 { color: pink; }
+  
+}
+
